# ecommerce

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  conftest.py  docker-compose.yml  entrypoint.sh  pre-commit-config.yaml  pyproject.toml  requirements.txt
accounts/: admin.py  authentication_backends.py  forms.py  handlers.py  models.py  signals.py  urls.py  validators.py  views.py
accounts/migrations/: 0001_initial.py  0002_accounttype_useraddress_and_more.py  0003_alter_account_options_alter_user_options_and_more.py  0004_alter_user_account.py  0005_alter_user_account_alter_useraddress_state.py  0006_alter_useraddress_options.py  0007_remove_user_account_account_account.py  0008_rename_account_account_user.py  0009_account_date_of_birth.py  0010_alter_account_user.py  0011_alter_account_address.py  0012_remove_account_account_type_remove_account_address_and_more.py  0013_remove_accounttype_account_account_account_type_and_more.py  0014_alter_account_account_type_alter_useraddress_account.py  0015_account_client_id.py  0016_account_phone.py  0017_alter_accounttype_table_usershippingaddress.py  0017_alter_accounttype_table_usershippingadress.py  (+11 more)
cart/: cart.py  forms.py  models.py  urls.py  utils.py  views.py
coupons/: forms.py  models.py  urls.py  views.py
ecommerce/: settings.py  urls.py  views.py  wait_for_db.py
products/: admin.py  context_processors.py  forms.py  handlers.py  models.py  search_indexes.py  signals.py  urls.py  utils.py  views.py
shop/: urls.py  views.py
templates/: base.html  stylesheet_static.html
(+75 files in other folders)
