[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = "Web application for ecommerce"
authors = ["rafiwts <rafiwts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
