[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = "Web application for ecommerce"
authors = ["rafiwts <rafiwts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
tomli = "^2.0.1"
pre-commit = "^3.5.0"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
